--- a/CyP_12Nov2020.ipynb
+++ b/CyP_12Nov2020.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "CyP 12Nov2020.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNHYKZWMRc6nQntT4hQasKX",
+      "authorship_tag": "ABX9TyMnLJSRozkOJdZVdgOnQDur",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,24 +28,25 @@
       "cell_type": "code",
       "metadata": {
         "id": "TAeL-nt5cJQ_",
-        "outputId": "2fb66561-4e87-4a3f-a844-ce4a2e57cda8",
+        "outputId": "3baaef8d-f9ee-4399-b40f-1308be2d8ad9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "numero= int (input(\"Dame un numero\"))\n",
+        "numero= int (input(\"Dame un numero \"))\n",
         "if numero > 0:\n",
         "  print(\"El numero es positivo\")\n",
         "\n",
         "print(\"fin del programa\") "
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Dame un numero-9\n",
+            "Dame un numero 6\n",
+            "El numero es positivo\n",
             "fin del programa\n"
           ],
           "name": "stdout"
@@ -55,14 +56,42 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WefqwWH3fHpm",
-        "outputId": "44e290ca-e55d-4e0d-f845-8bb8121c90e4",
+        "id": "kTLrV-XSpNar",
+        "outputId": "772a9108-7d51-472d-f0ea-8f94a9fcffe5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "numero = int (input(\"Dame un numero\"))\n",
+        "numero= int (input(\"Dame un numero \"))\n",
+        "if numero > 0:\n",
+        "  print(\"El numero es positivo\")\n",
+        "else:\n",
+        "  print(\"El numero es negativo\")"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Dame un numero -8\n",
+            "El numero es negativo\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WefqwWH3fHpm",
+        "outputId": "a8ad939c-b9c7-4998-8395-dcb63df308ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "numero = int (input(\"Dame un numero \"))\n",
         "if numero > 0:\n",
         "  print(\"El numero es positivo\")\n",
         "elif numero== 0:\n",
@@ -70,13 +99,13 @@
         "else:\n",
         "  print(\"El numero es negativo\")\n"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Dame un numero-9\n",
-            "El numero es negativo\n"
+            "Dame un numero 0\n",
+            "El numero es cero\n"
           ],
           "name": "stdout"
         }
